# emmett

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  .gitmodules  .shellcheckrc  CHANGELOG.md  CMakeLists.txt  CPPLINT.cfg  README.md  main.cpp  typo.toml  typo.yoml  typos.toml
bench/char_classifier/: CMakeLists.txt  char_classifier.cpp
cpp/bench/char_classifier/: CMakeLists.txt  char_classifier.cpp
cpp/bench/example/: CMakeLists.txt
cpp/bench/memory_allocation/: CMakeLists.txt
cpp/bench/string_view_vs_string/: CMakeLists.txt
demo/cuda_op/: .clangd  CMakeLists.txt  README.md  pyproject.toml  setup_env.sh
demo/cuda_op/cmake/: FetchPybind11.cmake
demo/cuda_op/ctest/: CMakeLists.txt  test_thread_block_swizzle.cpp  test_thread_block_swizzle.cu
demo/cuda_op/experiment/bank_conflict/: memory_padding.cu  xor_swizzle.cu
demo/cuda_op/experiment/branch_divergency/: test_branch_divergency.cu
demo/cuda_op/experiment/bypass_l1/: test_l2_cache.cu
demo/cuda_op/experiment/coalesced_memory_access/: test_coalesce.cu
demo/cuda_op/experiment/cudnn_attn/: test_attn.cu
demo/cuda_op/experiment/cudnn_conv/: test_conv.cu
demo/cuda_op/experiment/dead_lock/: test_dead_lock.cu
demo/cuda_op/experiment/gemm_task_splitting/: gemm.cuh  gemm_base.cuh  gemm_impl.cuh  gemm_split_m.cuh  gemm_task_splitting.cu  test_gemm_task_splitting.cu
demo/cuda_op/experiment/gemm_tuning/: CMakeLists.txt  gemm_ampere.cuh  gemm_ampere_tcore.cuh  gemm_ampere_tcore_save.cuh  gemm_base.cuh  gemm_cutlass.cuh  gemm_cutlass_simt.cuh  gemm_cutlass_tcore.cuh  test_gemm.cu
demo/cuda_op/experiment/gemm_tuning/ampere/: tcore_smem.cuh
demo/cuda_op/experiment/l2_cache/: CMakeLists.txt  test_l2_cache.cu
demo/cuda_op/experiment/memory_access_vectorized/: test_vectorized.cu
demo/cuda_op/experiment/occupancy/: main.cu
demo/cuda_op/experiment/precision_big_number_eat_small/: test_main.cu
demo/cuda_op/experiment/sass_ptx/: CMakeLists.txt
demo/cuda_op/experiment/test_tcore_load/: main.cu
demo/cuda_op/experiment/thread_block_swizzle/: sequential.cuh  test_swizzle.cu
demo/cuda_op/experiment/thread_fence/: test_thread_fence.cu
demo/cuda_op/operator/: cuda_op.cpp  python_warp.cpp  python_wrap.cpp  schedule.txt
demo/cuda_op/operator/add/: add.cu  add.h
demo/cuda_op/operator/batch_norm/: batch_norm.h
demo/cuda_op/operator/batchnorm/: batchnorm.cu  batchnorm.h  t.cu  t.txt
demo/cuda_op/operator/flash_attention/: flash_attention.cu  flash_attention.h
demo/cuda_op/operator/gemm/: gemm.cu  gemm.h
demo/cuda_op/operator/group_norm/: group_norm.cu
demo/cuda_op/operator/groupnorm/: groupnorm.cu  groupnorm.cuh  groupnorm.h  t.txt
demo/cuda_op/operator/instance_norm/: instance_norm.cu
demo/cuda_op/operator/layer_norm/: layer_norm.cu
demo/cuda_op/operator/layernorm/: layernorm.cu  layernorm.h
demo/cuda_op/operator/relu/: relu.cu  relu.cuh
demo/cuda_op/operator/rms_norm/: rms_norm.h
demo/cuda_op/operator/sigmoid/: sigmoid.cu
demo/cuda_op/operator/softmax/: safe_softmax.cu  softmax.cu  softmax.h
demo/cuda_op/operator/sorting/: sorting.cu
demo/cuda_op/operator/thread_block_swizzle/: zigzag.cuh
demo/cuda_op/python/cuda_op/: __init__.py
demo/cuda_op/script/: set_conda_path.sh
demo/cuda_op/test/: test_add.py  test_batch_norm.py  test_conv.py  test_flash_attention.py  test_group_norm.py  test_groupnorm.py  test_layer_norm.py  test_sigmoid.py  test_softmax.py
demo/cuda_op/test/py_impl/: softmax.py
demo/cuda_operators/: .clangd  CMakeLists.txt  README.md
demo/cuda_operators/accuracy/: README.md
demo/cuda_operators/cmake/: FetchLibtorch.cmake  FetchProxy.cmake
demo/cuda_operators/operator/relu/: relu.cuh
demo/cuda_operators/operator/softmax/: softmax.cuh
demo/cuda_operators/test/: .clang-tidy  CMakeLists.txt
demo/cuda_operators/test/common/: perf_cuda_kernel.py  precision_proxy.cpp  precision_proxy.h  tensor.h
demo/cuda_operators/test/relu/: relu_impl.h  relu_test.cpp
demo/cuda_operators/test/softmax/: softmax_impl.h
demo/cuda_operators/test_precision/: test_relu.cu
demo/cuda_operators/util/: catch2_wrap.h  env_manager.cpp  env_manager.h  scope.h  util.cpp
demo/cuda_vector_add/: CMakeLists.txt  main.cu
demo/memory_leak_detector/: CMakeLists.txt  README.md  memory_leak.cpp  safely_allocate_memory.cpp
demo/strip_symtab/: CMakeLists.txt  main.cpp
demo_add_data_to_mysql/: .gitignore  CMakeLists.txt  main.cpp
demos/: CMakeLists.txt  README.md
demos/calculator/: README.md
demos/calculator/MyCalculator/MyCalculator/: AppDelegate.swift  SceneDelegate.swift  ViewController.swift
demos/calculator/MyCalculator/MyCalculator.xcodeproj/: project.pbxproj
demos/calculator/MyCalculator/MyCalculator/Base.lproj/: Main.storyboard
demos/calculator/MyCalculator/MyCalculatorTests/: MyCalculatorTests.swift
demos/calculator/MyCalculator/MyCalculatorUITests/: MyCalculatorUITests.swift  MyCalculatorUITestsLaunchTests.swift
demos/collect_terminal_output_save_to_mysql/: CMakeLists.txt  exec_cmd.h  main.cpp  print_cmd_res.h  recv_cmd.h  requirements.txt  vars.h
demos/insert_to_mysql/: CMakeLists.txt  README.md  insert_to_mysql.cpp
demos/multithreads_read_same_file/: CMakeLists.txt  README.md  multithreads_read_same_file.cpp  sample.txt
demos/strip_symtab/: README.md
demos/weather/: package-lock.json
demos/weather/weather/: package-lock.json  package.json
demos/weather/weather/src/components/: WeatherItem.vue
mlsys/cuda_kernel/cuda_minimal/: CMakeLists.txt
mlsys/cuda_kernel/cuda_op/experiment/cudnn_attn/: CMakeLists.txt
mlsys/kernel/cuda_op/experiment/gemm_tuning/: CMakeLists.txt  gemm_base.cuh  gemm_cutlass_simt.cuh  test_gemm.cu
mlsys/kernel/cuda_op/experiment/thread_block_swizzle/: CMakeLists.txt
pieces/string_view_or_string/: CMakeLists.txt  interaction_with_other_components.cpp  memory_allocation.cpp
process_demo/: CMakeLists.txt  main.cpp  signal_handler.h
tools/add_data_to_mysql/: CMakeLists.txt
tutorial/design_pattern/: 01_simple_factory.cpp  02_factory_method.cpp  03_abstract_factory.cpp  CMakeLists.txt  README.md
(+449 files in other folders)
